--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "sass": "^1.51.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "http://PulseAirDAO.github.io/front-end",
+  "homepage": "https://airdao.app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
